--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="Oxidoro.png">
     </head>
-    <body>
+    <body style="background-color: #393939;">
         <!-- canvas required by the Slint runtime -->
         <canvas id="canvas"></canvas>
         <script type="module">
